# Zangetsu

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
docs/: abstract_syntax_language_definition_evolution.md  context_free_grammar_evolution.md  lexical_grammar_evolution.md  syntax_grammar_evolution.md
examples/chapter-001/: return_2.s
src/: CMakeLists.txt
src/ast_nodes/: CMakeLists.txt  assembly_ast_nodes.hpp  assembly_emitter.cpp  assembly_emitter.hpp  assembly_generator_visitor.cpp  assembly_generator_visitor.hpp  ast_nodes.cpp  ast_nodes.hpp  i_ast_visitor.hpp  pretty_printer_visitor.cpp  pretty_printer_visitor.hpp
src/backend/: CMakeLists.txt
src/backend/asm_ast/: CMakeLists.txt
src/backend/asm_codegen/: CMakeLists.txt  asm_codegen_visitor.cpp  asm_codegen_visitor.hpp
src/backend/asm_emitter/: CMakeLists.txt  asm_emitter.cpp  asm_emitter.hpp
src/code_generation/: CMakeLists.txt
src/compiler_utils/: CMakeLists.txt  token.cpp  token.hpp  token_type.cpp  token_type.hpp
src/file_scanner/: CMakeLists.txt  file_scanner.cpp
src/frontend/: CMakeLists.txt  token.cpp  token_type.cpp  token_type.hpp
src/frontend/ast/: CMakeLists.txt  ast_nodes.cpp  ast_nodes.hpp
src/frontend/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/frontend/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/static_analyzer/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/file_scanner/: CMakeLists.txt  file_scanner.cpp  file_scanner.hpp
